--- a/Spearman's_Rank_Correlation_Coefficient_using_Ordinal_Data.ipynb
+++ b/Spearman's_Rank_Correlation_Coefficient_using_Ordinal_Data.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Spearman's-rank-Correlation-Coefficient-using-Ordinal-Data\" data-toc-modified-id=\"Spearman's-rank-Correlation-Coefficient-using-Ordinal-Data-1\">Spearman's rank Correlation Coefficient using Ordinal Data</a></span><ul class=\"toc-item\"><li><span><a href=\"#Discover-the-strength-of-monotonic-relation\" data-toc-modified-id=\"Discover-the-strength-of-monotonic-relation-1.1\">Discover the strength of monotonic relation</a></span></li></ul></li><li><span><a href=\"#Introduction\" data-toc-modified-id=\"Introduction-2\">Introduction</a></span></li><li><span><a href=\"#Simplified-formula\" data-toc-modified-id=\"Simplified-formula-3\">Simplified formula</a></span></li><li><span><a href=\"#General-formula\" data-toc-modified-id=\"General-formula-4\">General formula</a></span></li><li><span><a href=\"#Pandas-corr\" data-toc-modified-id=\"Pandas-corr-5\">Pandas corr</a></span></li><li><span><a href=\"#Finding-manually-using-formula-(1-1)\" data-toc-modified-id=\"Finding-manually-using-formula-(1-1)-6\">Finding manually using formula (1-1)</a></span></li><li><span><a href=\"#Finding-manually-using-formula-(1-2)\" data-toc-modified-id=\"Finding-manually-using-formula-(1-2)-7\">Finding manually using formula (1-2)</a></span></li><li><span><a href=\"#Strictly-increasing\" data-toc-modified-id=\"Strictly-increasing-8\">Strictly increasing</a></span></li><li><span><a href=\"#Strictly-decreasing\" data-toc-modified-id=\"Strictly-decreasing-9\">Strictly decreasing</a></span></li><li><span><a href=\"#No-monotonic-behavior\" data-toc-modified-id=\"No-monotonic-behavior-10\">No monotonic behavior</a></span></li><li><span><a href=\"#Real-life-example\" data-toc-modified-id=\"Real-life-example-11\">Real life example</a></span><ul class=\"toc-item\"><li><span><a href=\"#Importing-a-CSV-file\" data-toc-modified-id=\"Importing-a-CSV-file-11.1\">Importing a CSV file</a></span></li></ul></li><li><span><a href=\"#Plotting-imported-data\" data-toc-modified-id=\"Plotting-imported-data-12\">Plotting imported data</a></span></li><li><span><a href=\"#Ranking-data\" data-toc-modified-id=\"Ranking-data-13\">Ranking data</a></span></li><li><span><a href=\"#Conclusion\" data-toc-modified-id=\"Conclusion-14\">Conclusion</a></span></li><li><span><a href=\"#Examples-to-use-Spearman's-correlation-are:\" data-toc-modified-id=\"Examples-to-use-Spearman's-correlation-are:-15\">Examples to use Spearman's correlation are:</a></span></li><li><span><a href=\"#Reference\" data-toc-modified-id=\"Reference-16\">Reference</a></span></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Spearman's-rank-Correlation-Coefficient-using-Ordinal-Data\" data-toc-modified-id=\"Spearman's-rank-Correlation-Coefficient-using-Ordinal-Data-1\">Spearman's rank Correlation Coefficient using Ordinal Data</a></span><ul class=\"toc-item\"><li><span><a href=\"#Discover-the-strength-of-monotonic-relation\" data-toc-modified-id=\"Discover-the-strength-of-monotonic-relation-1.1\">Discover the strength of monotonic relation</a></span></li></ul></li><li><span><a href=\"#Introduction\" data-toc-modified-id=\"Introduction-2\">Introduction</a></span></li><li><span><a href=\"#Simplified-formula\" data-toc-modified-id=\"Simplified-formula-3\">Simplified formula</a></span></li><li><span><a href=\"#General-formula\" data-toc-modified-id=\"General-formula-4\">General formula</a></span></li><li><span><a href=\"#Pandas-corr\" data-toc-modified-id=\"Pandas-corr-5\">Pandas corr</a></span></li><li><span><a href=\"#Finding-manually-using-the-formula-(1-1)\" data-toc-modified-id=\"Finding-manually-using-the-formula-(1-1)-6\">Finding manually using the formula (1-1)</a></span></li><li><span><a href=\"#Finding-manually-using-the-formula-(1-2)\" data-toc-modified-id=\"Finding-manually-using-the-formula-(1-2)-7\">Finding manually using the formula (1-2)</a></span></li><li><span><a href=\"#Strictly-increasing\" data-toc-modified-id=\"Strictly-increasing-8\">Strictly increasing</a></span></li><li><span><a href=\"#Strictly-decreasing\" data-toc-modified-id=\"Strictly-decreasing-9\">Strictly decreasing</a></span></li><li><span><a href=\"#No-monotonic-behavior\" data-toc-modified-id=\"No-monotonic-behavior-10\">No monotonic behavior</a></span></li><li><span><a href=\"#Real-life-example\" data-toc-modified-id=\"Real-life-example-11\">Real life example</a></span><ul class=\"toc-item\"><li><span><a href=\"#Importing-a-CSV-file\" data-toc-modified-id=\"Importing-a-CSV-file-11.1\">Importing a CSV file</a></span></li></ul></li><li><span><a href=\"#Plotting-imported-data\" data-toc-modified-id=\"Plotting-imported-data-12\">Plotting imported data</a></span></li><li><span><a href=\"#Ranking-data\" data-toc-modified-id=\"Ranking-data-13\">Ranking data</a></span></li><li><span><a href=\"#Conclusion\" data-toc-modified-id=\"Conclusion-14\">Conclusion</a></span></li><li><span><a href=\"#Examples-to-use-Spearman's-correlation-are:\" data-toc-modified-id=\"Examples-to-use-Spearman's-correlation-are:-15\">Examples to use Spearman's correlation are:</a></span></li><li><span><a href=\"#Reference\" data-toc-modified-id=\"Reference-16\">Reference</a></span></li></ul></div>"
    ]
   },
   {
@@ -81,7 +81,7 @@
     "\n",
     "$$\n",
     "\\begin{align}\n",
-    "\\rho_{r_x,r_y}= \\frac{cov(r_x,r_y)}{\\sigma _{rx} \\sigma _{ry}} \\tag{1-2}\n",
+    "\\rho_{r_x,r_y}= \\frac{cov(r_x,r_y)}{\\sigma _{rx} \\sigma _{ry}} \\tag{1-1}\n",
     "\\end{align}\n",
     "$$\n",
     "\n",
@@ -437,7 +437,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Finding manually using formula (1-1)\n",
+    "# Finding manually using the formula (1-1)\n",
     "\n",
     "\n",
     "Rank Set A|Rank Set B|d|$d^2$\n",
@@ -483,7 +483,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Finding manually using formula (1-2)\n",
+    "# Finding manually using the formula (1-2)\n",
     "\n",
     "$$\n",
     "\\begin{align}\n",
