--- a/Spearman_part_2.ipynb
+++ b/Spearman_part_2.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Inspecting-Scipy.stats.spearmanr\" data-toc-modified-id=\"Inspecting-Scipy.stats.spearmanr-1\">Inspecting Scipy.stats.spearmanr</a></span><ul class=\"toc-item\"><li><span><a href=\"#spearmanr-requires-ranked-data\" data-toc-modified-id=\"spearmanr-requires-ranked-data-1.1\">spearmanr requires ranked data</a></span></li></ul></li><li><span><a href=\"#Introduction\" data-toc-modified-id=\"Introduction-2\">Introduction</a></span></li><li><span><a href=\"#Spearman's-Rank-Correlation-with--identical-values\" data-toc-modified-id=\"Spearman's-Rank-Correlation-with--identical-values-3\">Spearman's Rank Correlation with  identical values</a></span></li><li><span><a href=\"#ddof-in-Pandas-and-Numpy-are-different\" data-toc-modified-id=\"ddof-in-Pandas-and-Numpy-are-different-4\">ddof in Pandas and Numpy are different</a></span></li><li><span><a href=\"#Comparing-Pearson-and-Spearman\" data-toc-modified-id=\"Comparing-Pearson-and-Spearman-5\">Comparing Pearson and Spearman</a></span><ul class=\"toc-item\"><li><span><a href=\"#Linear-relation\" data-toc-modified-id=\"Linear-relation-5.1\">Linear relation</a></span></li><li><span><a href=\"#Investigating-quadratic\" data-toc-modified-id=\"Investigating-quadratic-5.2\">Investigating quadratic</a></span></li><li><span><a href=\"#Investigating-cubic-function\" data-toc-modified-id=\"Investigating-cubic-function-5.3\">Investigating cubic function</a></span></li></ul></li><li><span><a href=\"#Conclusion\" data-toc-modified-id=\"Conclusion-6\">Conclusion</a></span></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Inspecting-Spearman's-rank-correlation-coefficient\" data-toc-modified-id=\"Inspecting-Spearman's-rank-correlation-coefficient-1\">Inspecting Spearman's rank correlation coefficient</a></span><ul class=\"toc-item\"><li><span><a href=\"#Discover-the-strength-of-monotonic-relation-Part-2\" data-toc-modified-id=\"Discover-the-strength-of-monotonic-relation-Part-2-1.1\">Discover the strength of monotonic relation Part 2</a></span></li><li><span><a href=\"#spearmanr-requires-ranked-data\" data-toc-modified-id=\"spearmanr-requires-ranked-data-1.2\">spearmanr requires ranked data</a></span></li></ul></li><li><span><a href=\"#Introduction\" data-toc-modified-id=\"Introduction-2\">Introduction</a></span></li><li><span><a href=\"#Spearman's-Rank-Correlation-with--identical-values\" data-toc-modified-id=\"Spearman's-Rank-Correlation-with--identical-values-3\">Spearman's Rank Correlation with  identical values</a></span></li><li><span><a href=\"#Pandas-corr\" data-toc-modified-id=\"Pandas-corr-4\">Pandas corr</a></span></li><li><span><a href=\"#Finding-manually-using-the-formula\" data-toc-modified-id=\"Finding-manually-using-the-formula-5\">Finding manually using the formula</a></span><ul class=\"toc-item\"><li><span><a href=\"#Ranking-data\" data-toc-modified-id=\"Ranking-data-5.1\">Ranking data</a></span></li></ul></li><li><span><a href=\"#ddof-in-Pandas-and-Numpy-are-different\" data-toc-modified-id=\"ddof-in-Pandas-and-Numpy-are-different-6\">ddof in Pandas and Numpy are different</a></span></li><li><span><a href=\"#Comparing-Pearson-and-Spearman\" data-toc-modified-id=\"Comparing-Pearson-and-Spearman-7\">Comparing Pearson and Spearman</a></span><ul class=\"toc-item\"><li><span><a href=\"#Linear-relation\" data-toc-modified-id=\"Linear-relation-7.1\">Linear relation</a></span></li><li><span><a href=\"#Investigating-quadratic\" data-toc-modified-id=\"Investigating-quadratic-7.2\">Investigating quadratic</a></span></li><li><span><a href=\"#Investigating-cubic-function\" data-toc-modified-id=\"Investigating-cubic-function-7.3\">Investigating cubic function</a></span></li></ul></li><li><span><a href=\"#Conclusion\" data-toc-modified-id=\"Conclusion-8\">Conclusion</a></span></li></ul></div>"
    ]
   },
   {
@@ -35,7 +35,7 @@
     "\n",
     "In this article, I'd like to explore the Spearman's rank correlation coefficient using data that includes identical values. I also compare difference between the Spearman and Pearson vaules.\n",
     "\n",
-    "In the [`scipy.stats.spearmanr`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.stats.spearmanr.html) document, using ordinal data is not explicitly explained. I'd like to dig about it as well.\n"
+    "In the [`scipy.stats.spearmanr`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.stats.spearmanr.html) document, using ordinal data is not explicitly stated. I'd like to dig about it as well.\n"
    ]
   },
   {
@@ -44,12 +44,34 @@
    "source": [
     "# Spearman's Rank Correlation with  identical values\n",
     "\n",
-    "Now we create another dataframe which includes the same values."
+    "The general formula of Spearman's rank correlation is the following. When you have data with identical ranks, you have to use this formula rather than the simplified formula.\n",
+    "\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "\\rho_{r_x,r_y}= \\frac{cov(r_x,r_y)}{\\sigma _{rx} \\sigma _{ry}} \\tag{1-1}\n",
+    "\\end{align}\n",
+    "$$\n",
+    "\n",
+    "where <br>\n",
+    "$cov(r_x,r_y)$: the covariance of ranked data $r_x$ and $r_y$.<br> \n",
+    "$\\sigma_{rx}$ and $\\sigma_{ry}$ are the standard deviations of $r_x$ and $r_y$.\n",
+    "\n",
+    "\n",
+    "Let's import necessary libraries."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://gist.github.com/e2ac6a136d7b61298dd5102a8bcab616"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -123,26 +145,218 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's find the Spearman correlation coefficient using `scipy.stats.spearmanr`."
+    "# Pandas corr\n",
+    "\n",
+    "[Pandas corr](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.corr.html) requires to set the method. We use `spearman` for the method. It returns the correlation matrix, so we need to select `[0,1]`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://gist.github.com/5d24491e74d2cdb96a227076cf013ccd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Set of A</th>\n",
+       "      <th>Set of B</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Set of A</th>\n",
+       "      <td>1.00000</td>\n",
+       "      <td>0.71056</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Set of B</th>\n",
+       "      <td>0.71056</td>\n",
+       "      <td>1.00000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Set of A  Set of B\n",
+       "Set of A   1.00000   0.71056\n",
+       "Set of B   0.71056   1.00000"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.corr(method='spearman')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Finding manually using the formula\n",
+    "\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "\\rho_{r_x,r_y}= \\frac{cov(r_x,r_y)}{\\sigma _{rx} \\sigma _{ry}} \\tag{1-1}\n",
+    "\\end{align}\n",
+    "$$\n",
+    "\n",
+    "The formula requires covariance of $r_x$ and $r_y$, standard deviations of $\\sigma _{rx}, \\sigma _{ry}$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ranking data\n",
+    "\n",
+    "We need to rank the data using `scipy.stats.rankdata`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://gist.github.com/a3d9bcd264d27fd57d2d1c57babf0d7a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "correlation=0.710560, p-value=0.073530\n"
+      "[5.  3.5 2.  1.  3.5 6.  7. ]\n",
+      "[2. 4. 4. 1. 4. 7. 6.]\n"
      ]
     }
    ],
    "source": [
-    "correlation, pval = spearmanr(df)\n",
-    "print(f'correlation={correlation:.6f}, p-value={pval:.6f}')"
+    "from scipy.stats import rankdata\n",
+    "\n",
+    "r_x=rankdata(df.iloc[:,0])\n",
+    "print(r_x)\n",
+    "r_y=rankdata(df.iloc[:,1])\n",
+    "print(r_y)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Set A|Set B|Rank Set A|Rank Set B\n",
+    ":-:|:-:|:-:|:-:\n",
+    "7|3|5|2\n",
+    "6|4|3.5|4\n",
+    "5|4|2|4\n",
+    "3|2|1|1\n",
+    "6|4|3.5|4\n",
+    "8|9|6|7\n",
+    "9|7|7|6\n",
+    "\n",
+    "In Set A, there are two 6s and their ranks are 3rd and 4th.\n",
+    "\n",
+    "$$\n",
+    "\\frac{3+4}{2}=3.5\n",
+    "$$\n",
+    "\n",
+    "In Set B, there are three 4s and their ranks are 3rd, 4th and 5th. Therefor their ranks are:\n",
+    "\n",
+    "$$\n",
+    "\\frac{3+4+5}{3}=4\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -159,68 +373,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Ranking data\n",
+    "# Comparing Pearson and Spearman\n",
     "\n",
-    "Using `scipy.stats.rankdata` ..."
+    "\n",
+    "## Linear relation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[5.  3.5 2.  1.  3.5 6.  7. ]\n",
-      "[2. 4. 4. 1. 4. 7. 6.]\n"
+      "https://gist.github.com/a3d9bcd264d27fd57d2d1c57babf0d7a\n"
      ]
     }
    ],
    "source": [
-    "from scipy.stats import rankdata\n",
-    "\n",
-    "print(rankdata(df.iloc[:,0]))\n",
-    "print(rankdata(df.iloc[:,1]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Comparing Pearson and Spearman\n",
-    "\n",
-    "\n",
-    "## Linear relation"
+    "%%bash\n",
+    "gist -P -f spearman2_2.py -d \"ranked data\""
    ]
   },
   {
