--- a/Spearman_part_2.ipynb
+++ b/Spearman_part_2.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Inspecting-Spearman's-rank-correlation-coefficient\" data-toc-modified-id=\"Inspecting-Spearman's-rank-correlation-coefficient-1\">Inspecting Spearman's rank correlation coefficient</a></span><ul class=\"toc-item\"><li><span><a href=\"#Discover-the-strength-of-monotonic-relation-Part-2\" data-toc-modified-id=\"Discover-the-strength-of-monotonic-relation-Part-2-1.1\">Discover the strength of monotonic relation Part 2</a></span></li><li><span><a href=\"#spearmanr-requires-ranked-data\" data-toc-modified-id=\"spearmanr-requires-ranked-data-1.2\">spearmanr requires ranked data</a></span></li></ul></li><li><span><a href=\"#Introduction\" data-toc-modified-id=\"Introduction-2\">Introduction</a></span></li><li><span><a href=\"#Spearman's-Rank-Correlation-with--identical-values\" data-toc-modified-id=\"Spearman's-Rank-Correlation-with--identical-values-3\">Spearman's Rank Correlation with  identical values</a></span></li><li><span><a href=\"#Pandas-corr\" data-toc-modified-id=\"Pandas-corr-4\">Pandas corr</a></span></li><li><span><a href=\"#Finding-manually-using-the-formula\" data-toc-modified-id=\"Finding-manually-using-the-formula-5\">Finding manually using the formula</a></span><ul class=\"toc-item\"><li><span><a href=\"#Ranking-data\" data-toc-modified-id=\"Ranking-data-5.1\">Ranking data</a></span></li></ul></li><li><span><a href=\"#ddof-in-Pandas-and-Numpy-are-different\" data-toc-modified-id=\"ddof-in-Pandas-and-Numpy-are-different-6\">ddof in Pandas and Numpy are different</a></span></li><li><span><a href=\"#Comparing-Pearson-and-Spearman\" data-toc-modified-id=\"Comparing-Pearson-and-Spearman-7\">Comparing Pearson and Spearman</a></span><ul class=\"toc-item\"><li><span><a href=\"#Linear-relation\" data-toc-modified-id=\"Linear-relation-7.1\">Linear relation</a></span></li><li><span><a href=\"#Investigating-quadratic\" data-toc-modified-id=\"Investigating-quadratic-7.2\">Investigating quadratic</a></span></li><li><span><a href=\"#Investigating-cubic-function\" data-toc-modified-id=\"Investigating-cubic-function-7.3\">Investigating cubic function</a></span></li></ul></li><li><span><a href=\"#Conclusion\" data-toc-modified-id=\"Conclusion-8\">Conclusion</a></span></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Inspecting-Spearman's-rank-correlation-coefficient\" data-toc-modified-id=\"Inspecting-Spearman's-rank-correlation-coefficient-1\">Inspecting Spearman's rank correlation coefficient</a></span><ul class=\"toc-item\"><li><span><a href=\"#Discover-the-strength-of-monotonic-relation-Part-2\" data-toc-modified-id=\"Discover-the-strength-of-monotonic-relation-Part-2-1.1\">Discover the strength of monotonic relation Part 2</a></span></li><li><span><a href=\"#spearmanr-requires-ranked-data\" data-toc-modified-id=\"spearmanr-requires-ranked-data-1.2\">spearmanr requires ranked data</a></span></li></ul></li><li><span><a href=\"#Introduction\" data-toc-modified-id=\"Introduction-2\">Introduction</a></span></li><li><span><a href=\"#Spearman's-Rank-Correlation-with--identical-values\" data-toc-modified-id=\"Spearman's-Rank-Correlation-with--identical-values-3\">Spearman's Rank Correlation with  identical values</a></span></li><li><span><a href=\"#Pandas-corr\" data-toc-modified-id=\"Pandas-corr-4\">Pandas corr</a></span></li><li><span><a href=\"#Finding-manually-using-the-formula\" data-toc-modified-id=\"Finding-manually-using-the-formula-5\">Finding manually using the formula</a></span><ul class=\"toc-item\"><li><span><a href=\"#Ranking-data\" data-toc-modified-id=\"Ranking-data-5.1\">Ranking data</a></span></li><li><span><a href=\"#Finding-covariance-with-numpy\" data-toc-modified-id=\"Finding-covariance-with-numpy-5.2\">Finding covariance with numpy</a></span></li><li><span><a href=\"#Finding-covariance-with-Pandas\" data-toc-modified-id=\"Finding-covariance-with-Pandas-5.3\">Finding covariance with Pandas</a></span></li><li><span><a href=\"#Finding-standard-deviations-with-numpy\" data-toc-modified-id=\"Finding-standard-deviations-with-numpy-5.4\">Finding standard deviations with numpy</a></span></li><li><span><a href=\"#Finding-standard-deviations-with-Pandas\" data-toc-modified-id=\"Finding-standard-deviations-with-Pandas-5.5\">Finding standard deviations with Pandas</a></span></li></ul></li><li><span><a href=\"#ddof-in-Pandas-and-Numpy-are-different\" data-toc-modified-id=\"ddof-in-Pandas-and-Numpy-are-different-6\">ddof in Pandas and Numpy are different</a></span></li><li><span><a href=\"#Comparing-Pearson-and-Spearman\" data-toc-modified-id=\"Comparing-Pearson-and-Spearman-7\">Comparing Pearson and Spearman</a></span><ul class=\"toc-item\"><li><span><a href=\"#Linear-relation\" data-toc-modified-id=\"Linear-relation-7.1\">Linear relation</a></span></li><li><span><a href=\"#Investigating-quadratic\" data-toc-modified-id=\"Investigating-quadratic-7.2\">Investigating quadratic</a></span></li><li><span><a href=\"#Investigating-cubic-function\" data-toc-modified-id=\"Investigating-cubic-function-7.3\">Investigating cubic function</a></span></li></ul></li><li><span><a href=\"#Conclusion\" data-toc-modified-id=\"Conclusion-8\">Conclusion</a></span></li></ul></div>"
    ]
   },
   {
@@ -307,56 +307,181 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Finding covariance with numpy"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[3.92857143, 2.71428571],\n",
+       "       [2.71428571, 3.71428571]])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.cov(r_x,r_y,ddof=0)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.714285714285714\n",
+      "3.1666666666666665\n"
+     ]
+    }
+   ],
+   "source": [
+    "cov_n0=np.cov(r_x,r_y,ddof=0)[0][1]\n",
+    "cov_n1=np.cov(r_x,r_y,ddof=1)[0][1]\n",
+    "print(cov_n0)\n",
+    "print(cov_n1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Finding covariance with Pandas"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.1666666666666665"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame({'Rank Set A':r_x, 'Rank Set B':r_y})\n",
+    "df.cov().iloc[0,1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Interestingly Pandas covariance returns the same value with Numpy when the ddof has value1. Numpy's cov ddof=1 will return the unbiased estimate and ddof=0 will return the simple average."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Finding standard deviations with numpy"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Numpy std default: 1.9820624179302297\n",
+      "Numpy std default: 1.927248223318863\n",
+      "Numpy std ddof=0: 1.9820624179302297\n",
+      "Numpy std ddof=0: 1.927248223318863\n",
+      "Numpy std ddof=1: 2.140872096444188\n",
+      "Numpy std ddof=1: 2.0816659994661326\n"
+     ]
+    }
+   ],
+   "source": [
+    "s_x=np.std(r_x)\n",
+    "s_y=np.std(r_y)\n",
+    "s_x0=np.std(r_x,ddof=0)\n",
+    "s_y0=np.std(r_y,ddof=0)\n",
+    "s_x1=np.std(r_x,ddof=1)\n",
+    "s_y1=np.std(r_y,ddof=1)\n",
+    "\n",
+    "print(f'Numpy std default: {s_x}')\n",
+    "print(f'Numpy std default: {s_y}')\n",
+    "print(f'Numpy std ddof=0: {s_x0}')\n",
+    "print(f'Numpy std ddof=0: {s_y0}')\n",
+    "print(f'Numpy std ddof=1: {s_x1}')\n",
+    "print(f'Numpy std ddof=1: {s_y1}')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.828986331140832"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cov_n/(s_x*s_y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Finding standard deviations with Pandas\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pandas std default: Rank Set A    2.140872\n",
+      "Rank Set B    2.081666\n",
+      "dtype: float64\n",
+      "Pandas std ddof=0: Rank Set A    1.982062\n",
+      "Rank Set B    1.927248\n",
+      "dtype: float64\n",
+      "Pandas std ddof=1: Rank Set A    2.140872\n",
+      "Rank Set B    2.081666\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Pandas std default: {df.std()}')\n",
+    "print(f'Pandas std ddof=0: {df.std(ddof=0)}')\n",
+    "print(f'Pandas std ddof=1: {df.std(ddof=1)}')"
+   ]
   },
   {
    "cell_type": "markdown",
