--- a/Standard_Deviation_Variance & Covariance.ipynb
+++ b/Standard_Deviation_Variance & Covariance.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Everything-you-need-to-know-about-Variance\" data-toc-modified-id=\"Everything-you-need-to-know-about-Variance-1\">Everything you need to know about Variance</a></span><ul class=\"toc-item\"><li><span><a href=\"#Variance-beginners\" data-toc-modified-id=\"Variance-beginners-1.1\">Variance beginners</a></span></li></ul></li><li><span><a href=\"#Introduction\" data-toc-modified-id=\"Introduction-2\">Introduction</a></span></li><li><span><a href=\"#Sample-variance\" data-toc-modified-id=\"Sample-variance-3\">Sample variance</a></span></li><li><span><a href=\"#Standard-variance\" data-toc-modified-id=\"Standard-variance-4\">Standard variance</a></span><ul class=\"toc-item\"><li><span><a href=\"#TI-nspire\" data-toc-modified-id=\"TI-nspire-4.1\">TI-nspire</a></span></li></ul></li><li><span><a href=\"#Covariance\" data-toc-modified-id=\"Covariance-5\">Covariance</a></span></li><li><span><a href=\"#Correlation\" data-toc-modified-id=\"Correlation-6\">Correlation</a></span></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Everything-you-need-to-know-about-Variance\" data-toc-modified-id=\"Everything-you-need-to-know-about-Variance-1\">Everything you need to know about Variance</a></span><ul class=\"toc-item\"><li><span><a href=\"#Variance-for-beginners\" data-toc-modified-id=\"Variance-for-beginners-1.1\">Variance for beginners</a></span></li></ul></li><li><span><a href=\"#Introduction\" data-toc-modified-id=\"Introduction-2\">Introduction</a></span></li><li><span><a href=\"#Sample-variance\" data-toc-modified-id=\"Sample-variance-3\">Sample variance</a></span></li><li><span><a href=\"#Standard-variance\" data-toc-modified-id=\"Standard-variance-4\">Standard variance</a></span><ul class=\"toc-item\"><li><span><a href=\"#TI-nspire\" data-toc-modified-id=\"TI-nspire-4.1\">TI-nspire</a></span></li></ul></li><li><span><a href=\"#Covariance\" data-toc-modified-id=\"Covariance-5\">Covariance</a></span></li><li><span><a href=\"#Correlation\" data-toc-modified-id=\"Correlation-6\">Correlation</a></span></li><li><span><a href=\"#Investigating-Pandas-and-Numpy-ddof\" data-toc-modified-id=\"Investigating-Pandas-and-Numpy-ddof-7\">Investigating Pandas and Numpy ddof</a></span></li></ul></div>"
    ]
   },
   {
@@ -154,6 +154,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Add contents from http://localhost:8888/notebooks/DataScience/my-medium-articles/Investigating_Pandas_and_Numpy_ddof.ipynb"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Investigating Pandas and Numpy ddof\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s_x=np.std(r_x)\n",
+    "s_y=np.std(r_y)\n",
+    "s_x0=np.std(r_x,ddof=0)\n",
+    "s_y0=np.std(r_y,ddof=0)\n",
+    "s_x1=np.std(r_x,ddof=1)\n",
+    "s_y1=np.std(r_y,ddof=1)\n",
+    "\n",
+    "print(f'Numpy std default: {s_x}')\n",
+    "print(f'Numpy std default: {s_y}')\n",
+    "print(f'Numpy std ddof=0: {s_x0}')\n",
+    "print(f'Numpy std ddof=0: {s_y0}')\n",
+    "print(f'Numpy std ddof=1: {s_x1}')\n",
+    "print(f'Numpy std ddof=1: {s_y1}')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -190,7 +227,7 @@
    "toc_cell": true,
    "toc_position": {},
    "toc_section_display": true,
-   "toc_window_display": true
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
