--- a/Spearman_part_2.ipynb
+++ b/Spearman_part_2.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Inspecting-Spearman's-rank-correlation-coefficient\" data-toc-modified-id=\"Inspecting-Spearman's-rank-correlation-coefficient-1\">Inspecting Spearman's rank correlation coefficient</a></span><ul class=\"toc-item\"><li><span><a href=\"#Discover-the-strength-of-monotonic-relation-Part-2\" data-toc-modified-id=\"Discover-the-strength-of-monotonic-relation-Part-2-1.1\">Discover the strength of monotonic relation Part 2</a></span></li><li><span><a href=\"#spearmanr-requires-ranked-data\" data-toc-modified-id=\"spearmanr-requires-ranked-data-1.2\">spearmanr requires ranked data</a></span></li></ul></li><li><span><a href=\"#Introduction\" data-toc-modified-id=\"Introduction-2\">Introduction</a></span></li><li><span><a href=\"#Spearman's-Rank-Correlation-with--identical-values\" data-toc-modified-id=\"Spearman's-Rank-Correlation-with--identical-values-3\">Spearman's Rank Correlation with  identical values</a></span></li><li><span><a href=\"#Pandas-corr\" data-toc-modified-id=\"Pandas-corr-4\">Pandas corr</a></span></li><li><span><a href=\"#Finding-manually-using-the-formula\" data-toc-modified-id=\"Finding-manually-using-the-formula-5\">Finding manually using the formula</a></span><ul class=\"toc-item\"><li><span><a href=\"#Ranking-data\" data-toc-modified-id=\"Ranking-data-5.1\">Ranking data</a></span></li><li><span><a href=\"#Finding-covariance-with-numpy\" data-toc-modified-id=\"Finding-covariance-with-numpy-5.2\">Finding covariance with numpy</a></span></li><li><span><a href=\"#Finding-covariance-with-Pandas\" data-toc-modified-id=\"Finding-covariance-with-Pandas-5.3\">Finding covariance with Pandas</a></span></li><li><span><a href=\"#Finding-standard-deviations-with-numpy\" data-toc-modified-id=\"Finding-standard-deviations-with-numpy-5.4\">Finding standard deviations with numpy</a></span></li><li><span><a href=\"#Finding-standard-deviations-with-Pandas\" data-toc-modified-id=\"Finding-standard-deviations-with-Pandas-5.5\">Finding standard deviations with Pandas</a></span></li></ul></li><li><span><a href=\"#ddof-in-Pandas-and-Numpy-are-different\" data-toc-modified-id=\"ddof-in-Pandas-and-Numpy-are-different-6\">ddof in Pandas and Numpy are different</a></span></li><li><span><a href=\"#Comparing-Pearson-and-Spearman\" data-toc-modified-id=\"Comparing-Pearson-and-Spearman-7\">Comparing Pearson and Spearman</a></span><ul class=\"toc-item\"><li><span><a href=\"#Linear-relation\" data-toc-modified-id=\"Linear-relation-7.1\">Linear relation</a></span></li><li><span><a href=\"#Investigating-quadratic\" data-toc-modified-id=\"Investigating-quadratic-7.2\">Investigating quadratic</a></span></li><li><span><a href=\"#Investigating-cubic-function\" data-toc-modified-id=\"Investigating-cubic-function-7.3\">Investigating cubic function</a></span></li></ul></li><li><span><a href=\"#Conclusion\" data-toc-modified-id=\"Conclusion-8\">Conclusion</a></span></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Inspecting-Spearman's-rank-correlation-coefficient\" data-toc-modified-id=\"Inspecting-Spearman's-rank-correlation-coefficient-1\">Inspecting Spearman's rank correlation coefficient</a></span><ul class=\"toc-item\"><li><span><a href=\"#Discover-the-strength-of-monotonic-relation-Part-2\" data-toc-modified-id=\"Discover-the-strength-of-monotonic-relation-Part-2-1.1\">Discover the strength of monotonic relation Part 2</a></span></li><li><span><a href=\"#spearmanr-requires-ranked-data\" data-toc-modified-id=\"spearmanr-requires-ranked-data-1.2\">spearmanr requires ranked data</a></span></li></ul></li><li><span><a href=\"#Introduction\" data-toc-modified-id=\"Introduction-2\">Introduction</a></span></li><li><span><a href=\"#Spearman's-Rank-Correlation-with--identical-values\" data-toc-modified-id=\"Spearman's-Rank-Correlation-with--identical-values-3\">Spearman's Rank Correlation with  identical values</a></span></li><li><span><a href=\"#Pandas-corr\" data-toc-modified-id=\"Pandas-corr-4\">Pandas corr</a></span></li><li><span><a href=\"#Finding-manually-using-the-formula\" data-toc-modified-id=\"Finding-manually-using-the-formula-5\">Finding manually using the formula</a></span><ul class=\"toc-item\"><li><span><a href=\"#Ranking-data\" data-toc-modified-id=\"Ranking-data-5.1\">Ranking data</a></span></li><li><span><a href=\"#Finding-covariance-with-numpy\" data-toc-modified-id=\"Finding-covariance-with-numpy-5.2\">Finding covariance with numpy</a></span></li><li><span><a href=\"#Finding-covariance-with-Pandas\" data-toc-modified-id=\"Finding-covariance-with-Pandas-5.3\">Finding covariance with Pandas</a></span></li><li><span><a href=\"#Finding-standard-deviations-with-numpy\" data-toc-modified-id=\"Finding-standard-deviations-with-numpy-5.4\">Finding standard deviations with numpy</a></span></li><li><span><a href=\"#Finding-standard-deviations-with-Pandas\" data-toc-modified-id=\"Finding-standard-deviations-with-Pandas-5.5\">Finding standard deviations with Pandas</a></span></li><li><span><a href=\"#Finding-Spearman's-correlation-coefficient\" data-toc-modified-id=\"Finding-Spearman's-correlation-coefficient-5.6\">Finding Spearman's correlation coefficient</a></span></li></ul></li><li><span><a href=\"#Comparing-Pearson-and-Spearman\" data-toc-modified-id=\"Comparing-Pearson-and-Spearman-6\">Comparing Pearson and Spearman</a></span><ul class=\"toc-item\"><li><span><a href=\"#Linear-relation\" data-toc-modified-id=\"Linear-relation-6.1\">Linear relation</a></span></li><li><span><a href=\"#Investigating-quadratic\" data-toc-modified-id=\"Investigating-quadratic-6.2\">Investigating quadratic</a></span></li><li><span><a href=\"#Investigating-cubic-function\" data-toc-modified-id=\"Investigating-cubic-function-6.3\">Investigating cubic function</a></span></li></ul></li><li><span><a href=\"#Conclusion\" data-toc-modified-id=\"Conclusion-7\">Conclusion</a></span></li></ul></div>"
    ]
   },
   {
@@ -34,7 +34,7 @@
     "\n",
     "[Link](https://towardsdatascience.com/discover-the-strength-of-monotonic-relation-850d11f72046)\n",
     "\n",
-    "In this article, I'd like to explore the Spearman's rank correlation coefficient using data that includes identical values. I also compare difference between the Spearman and Pearson vaules.\n",
+    "In this article, I'd like to explore the Spearman's rank correlation coefficient using data that includes identical values. I also compare differences between the Spearman and Pearson vaules.\n",
     "\n",
     "In the [`scipy.stats.spearmanr`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.stats.spearmanr.html) document, using ordinal data is not explicitly stated. I'd like to dig about it as well.\n"
    ]
@@ -44,6 +44,8 @@
    "metadata": {},
    "source": [
     "# Spearman's Rank Correlation with  identical values\n",
+    "\n",
+    "Spearman's rank correlation coefficient, $\\rho _{r_x,r_y}$ shows the correlation between two ordinal data. How one ordinal data changes as the other ordinal changes.\n",
     "\n",
     "The general formula of Spearman's rank correlation is the following. When you have data with identical ranks, you have to use this formula rather than the simplified formula.\n",
     "\n",
@@ -72,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -213,7 +215,7 @@
        "Set of B   0.71056   1.00000"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -309,12 +311,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Finding covariance with numpy"
+    "## Finding covariance with numpy\n",
+    "\n",
+    "Finding standard deviation, variance and covariance with Pandas and Numpy are bit different. You need to use `ddof` differently in both libraries. I will write about more ditails in future article. For now we use "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +328,7 @@
        "       [2.71428571, 3.71428571]])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +376,7 @@
        "3.1666666666666665"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -415,39 +419,15 @@
     }
    ],
    "source": [
-    "s_x=np.std(r_x)\n",
-    "s_y=np.std(r_y)\n",
     "s_x0=np.std(r_x,ddof=0)\n",
     "s_y0=np.std(r_y,ddof=0)\n",
     "s_x1=np.std(r_x,ddof=1)\n",
     "s_y1=np.std(r_y,ddof=1)\n",
     "\n",
-    "print(f'Numpy std default: {s_x}')\n",
-    "print(f'Numpy std default: {s_y}')\n",
     "print(f'Numpy std ddof=0: {s_x0}')\n",
     "print(f'Numpy std ddof=0: {s_y0}')\n",
     "print(f'Numpy std ddof=1: {s_x1}')\n",
     "print(f'Numpy std ddof=1: {s_y1}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.828986331140832"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cov_n/(s_x*s_y)"
    ]
   },
   {
@@ -459,40 +439,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pandas std default: Rank Set A    2.140872\n",
-      "Rank Set B    2.081666\n",
-      "dtype: float64\n",
-      "Pandas std ddof=0: Rank Set A    1.982062\n",
+      "Rank Set A    1.982062\n",
       "Rank Set B    1.927248\n",
       "dtype: float64\n",
-      "Pandas std ddof=1: Rank Set A    2.140872\n",
+      "Rank Set A    2.140872\n",
       "Rank Set B    2.081666\n",
       "dtype: float64\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2.140872096444188"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(f'Pandas std default: {df.std()}')\n",
-    "print(f'Pandas std ddof=0: {df.std(ddof=0)}')\n",
-    "print(f'Pandas std ddof=1: {df.std(ddof=1)}')"
+    "print(df.std(ddof=0))\n",
+    "print(df.std(ddof=1))\n",
+    "df.std(ddof=1)[0]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ddof in Pandas and Numpy are different\n",
+    "## Finding Spearman's correlation coefficient\n",
     "\n",
+    "Now we put all calculations together to find Spearman's correlation coefficient from the formula.\n",
     "\n",
-    "When you find the variance and standard deviation, Numpy and Pandas' default `ddof` are different.\n",
-    "\n"
+    "If you use the same ddof values for numpy's covariance and standard deviation, you get the same correct answers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7105597124064273"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cov_n0/(s_x0*s_y0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7105597124064275"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cov_n1/(s_x1*s_y1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In Pandas documentation it is not stated that `pandas.cov` uses the default value of ddof=1. We need to use `ddof=1` for the standard deviations."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7105597124064275"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.cov().iloc[0,1]/(df.std(ddof=1)[0]*df.std(ddof=1)[1])"
    ]
   },
   {
@@ -501,6 +555,11 @@
    "source": [
     "# Comparing Pearson and Spearman\n",
     "\n",
+    "Now let's investigate the differences between Spearman and Pearson correlation coefficient.\n",
+    "\n",
+    "As I wrote in the introduction, Spearman's rank correlation coefficient, $\\rho _{r_x,r_y}$ shows the correlation between two ordinal data. How one ordinal data changes as the other ordinal changes. Not well known part is that even rx and ry changes harmoniously, when ry decreases while rx increases, the Spearman value goes down.\n",
+    "\n",
+    "Let me show you what it means.\n",
     "\n",
     "## Linear relation"
    ]
@@ -645,7 +704,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "While x increases f(x) increases and the Spearman value is 1. However even we use the same function, but using different domain,the Spearman value decrease. It is because values of f(x) decreases when x values increase. "
+    "While x increases f(x) increases and the Spearman value is 1. However even we use the same function, using different domain produces a different Spearman value. It is because values of f(x) decreases when x values increase. Once the function goes up and down, the Spearman value decreases."
    ]
   },
   {
@@ -802,17 +861,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": []
   },
   {
@@ -824,13 +879,6 @@
     "- spearmanr requires ranked data so your data is required to be ordinal.Generally your data is not ordinal, so it is a good practice using `scipy.stats.rankdata` when you are finding the Spearman. \n",
     "- It is also recommended to plot a graph to see any values are decreasing since it will affect your Spearman value.\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
