--- a/Standard_Deviation_Variance & Covariance.ipynb
+++ b/Standard_Deviation_Variance & Covariance.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Everything-you-need-to-know-about-Variance\" data-toc-modified-id=\"Everything-you-need-to-know-about-Variance-1\">Everything you need to know about Variance</a></span><ul class=\"toc-item\"><li><span><a href=\"#Variance-for-beginners\" data-toc-modified-id=\"Variance-for-beginners-1.1\">Variance for beginners</a></span></li></ul></li><li><span><a href=\"#Introduction\" data-toc-modified-id=\"Introduction-2\">Introduction</a></span></li><li><span><a href=\"#Sample-variance\" data-toc-modified-id=\"Sample-variance-3\">Sample variance</a></span></li><li><span><a href=\"#Standard-variance\" data-toc-modified-id=\"Standard-variance-4\">Standard variance</a></span><ul class=\"toc-item\"><li><span><a href=\"#TI-nspire\" data-toc-modified-id=\"TI-nspire-4.1\">TI-nspire</a></span></li></ul></li><li><span><a href=\"#Covariance\" data-toc-modified-id=\"Covariance-5\">Covariance</a></span></li><li><span><a href=\"#Correlation\" data-toc-modified-id=\"Correlation-6\">Correlation</a></span></li><li><span><a href=\"#Investigating-Pandas-and-Numpy-ddof\" data-toc-modified-id=\"Investigating-Pandas-and-Numpy-ddof-7\">Investigating Pandas and Numpy ddof</a></span></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Everything-you-need-to-know-about-Variance\" data-toc-modified-id=\"Everything-you-need-to-know-about-Variance-1\">Everything you need to know about Variance</a></span><ul class=\"toc-item\"><li><span><a href=\"#Variance-for-beginners\" data-toc-modified-id=\"Variance-for-beginners-1.1\">Variance for beginners</a></span></li></ul></li><li><span><a href=\"#Introduction\" data-toc-modified-id=\"Introduction-2\">Introduction</a></span></li><li><span><a href=\"#Sample-variance\" data-toc-modified-id=\"Sample-variance-3\">Sample variance</a></span></li><li><span><a href=\"#Standard-variance\" data-toc-modified-id=\"Standard-variance-4\">Standard variance</a></span><ul class=\"toc-item\"><li><span><a href=\"#TI-nspire\" data-toc-modified-id=\"TI-nspire-4.1\">TI-nspire</a></span></li></ul></li><li><span><a href=\"#Covariance\" data-toc-modified-id=\"Covariance-5\">Covariance</a></span></li><li><span><a href=\"#Correlation\" data-toc-modified-id=\"Correlation-6\">Correlation</a></span></li><li><span><a href=\"#ddof-in-Pandas-and-Numpy-are-different\" data-toc-modified-id=\"ddof-in-Pandas-and-Numpy-are-different-7\">ddof in Pandas and Numpy are different</a></span></li><li><span><a href=\"#Investigating-Pandas-and-Numpy-ddof\" data-toc-modified-id=\"Investigating-Pandas-and-Numpy-ddof-8\">Investigating Pandas and Numpy ddof</a></span></li></ul></div>"
    ]
   },
   {
@@ -33,7 +33,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.stats import chi2_contingency\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from scipy.stats import spearmanr\n",
+    "from scipy.stats import pearsonr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -161,6 +175,99 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "correlation=0.710560, p-value=0.073530\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "df = pd.DataFrame(\n",
+    "    [\n",
+    "        [7,3],\n",
+    "        [6,4],\n",
+    "        [5,4],\n",
+    "        [3,2],\n",
+    "        [6,4],\n",
+    "        [8,9],\n",
+    "        [9,7]\n",
+    "    ],\n",
+    "    columns=['Set of A','Set of B'])\n",
+    "\n",
+    "correlation, pval = spearmanr(df)\n",
+    "print(f'correlation={correlation:.6f}, p-value={pval:.6f}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5.  3.5 2.  1.  3.5 6.  7. ]\n",
+      "[2. 4. 4. 1. 4. 7. 6.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.stats import rankdata\n",
+    "\n",
+    "r_x=rankdata(df.iloc[:,0])\n",
+    "print(r_x)\n",
+    "r_y=rankdata(df.iloc[:,1])\n",
+    "print(r_y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pandas std default: Set of A    1.976047\n",
+      "Set of B    2.429972\n",
+      "dtype: float64\n",
+      "Pandas std ddof=0: Set of A    1.829464\n",
+      "Set of B    2.249717\n",
+      "dtype: float64\n",
+      "Pandas std ddof=1: Set of A    1.976047\n",
+      "Set of B    2.429972\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Pandas std default: {df.std()}')\n",
+    "print(f'Pandas std ddof=0: {df.std(ddof=0)}')\n",
+    "print(f'Pandas std ddof=1: {df.std(ddof=1)}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ddof in Pandas and Numpy are different\n",
+    "\n",
+    "\n",
+    "When you find the variance and standard deviation, Numpy and Pandas' default `ddof` are different.\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -171,9 +278,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Numpy std default: 1.9820624179302297\n",
+      "Numpy std default: 1.927248223318863\n",
+      "Numpy std ddof=0: 1.9820624179302297\n",
+      "Numpy std ddof=0: 1.927248223318863\n",
+      "Numpy std ddof=1: 2.140872096444188\n",
+      "Numpy std ddof=1: 2.0816659994661326\n"
+     ]
+    }
+   ],
    "source": [
     "s_x=np.std(r_x)\n",
     "s_y=np.std(r_y)\n",
@@ -189,6 +309,13 @@
     "print(f'Numpy std ddof=1: {s_x1}')\n",
     "print(f'Numpy std ddof=1: {s_y1}')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
